forked JorenSix/TeensyDAQ and refactored project